# m-queens3

./: .clang-format  CMakeLists.txt  bithacks.hpp
presolver/: CMakeLists.txt  board.hpp  coronal2.cpp  coronal2.hpp  cpu_solver_recursive.hpp  mini_board.hpp  presolver.cpp  symmetry.cpp  symmetry.hpp
